--- a/src/components/trends.css
+++ b/src/components/trends.css
@@ -1,12 +1,27 @@
+.trendwrapper{
+  border-bottom: 1px solid rgb(197, 195, 195);
+  
+}
+.no{
+    align-items: center;
+}
 .trends{
     display: flex;
     flex-direction: column;
-    margin: 15px;
+    margin: 20px;
+     cursor: pointer;
 
 }
+
 .trendno{
     display: flex;
-    align-items: center;
     justify-content: space-between;
-   
+    font-size: 12px;
+}
+.trendtitle{
+    font-weight: 900;
+    margin: 5px 0px;
+}
+.tweetscount{
+    font-size: 12px;
 }
