--- a/src/components/tweet.css
+++ b/src/components/tweet.css
@@ -34,16 +34,15 @@
     font-size: 10px;
 }
 .footericon{
-    font-size:!important 10px ; 
-    font-weight:!important  normal;
+    font-size: 10px ; 
+    font-weight: normal;
 }
 .username{
     color: lightgrey;
     margin:0px 5px;
 }
-.contentmedia>img{
- 
-   height:300px ;
+.contentmedia{
+   flex: 1;
    /* object-fit: contain; */
    border-radius: 20px;
 }
