--- a/src/homeright.css
+++ b/src/homeright.css
@@ -6,8 +6,12 @@
 }
 .trendswrapper{
 background-color: whitesmoke;
-margin-top: 30px;
+margin: 1px 20 10px 20px;
 border-radius: 20px;
+height: 100vh;
+display: flex;
+flex-direction: column;
+
 }
 .topsearch{
     display: flex;
@@ -16,6 +20,7 @@ border-radius: 20px;
     align-items: center;
     background-color: whitesmoke;
     border-radius: 30px;
+    margin:10px 20px 10px 20px;
   
 }
 .topsearchicon{
@@ -34,3 +39,29 @@ border-radius: 20px;
     background-color: whitesmoke;
    
 }
+.trendnav{
+    display: flex;
+    align-items: center; 
+    justify-content: space-between;
+    margin: 20px;
+
+}
+.locationwrapper{
+    border-bottom: 1px solid rgb(197, 195, 195);
+   
+}
+.location{
+    font-weight: 900;
+}
+.settings{
+  color: #00acee;
+   cursor: pointer;
+   padding: 5px;
+   border-radius:50%;
+}
+/* .settings:hover{
+  
+    background-color: #e1e8ed;
+
+   
+} */
